--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="style.css" />
 
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
-
+    <link rel="stylesheet" href="https://kit.fontawesome.com/80aada6d6e.css" crossorigin="anonymous">
     <style>
       .attribution {
         font-size: 11px;
@@ -27,9 +28,12 @@
     </style>
   </head>
   <body>
-    <div id="section">
+    <div id="content">
+      <div id="section">
       <div class="logo"><img src="images/logo.svg" alt="" /></div>
-      <div class="illustration-mockup"><img src="images/illustration-mockups.svg" alt="" /></div>
+      <div class="illustration-mockup">
+        <img src="images/illustration-mockups.svg" alt="" />
+      </div>
     </div>
     <div id="section2">
       <h1>Build The Community Your Fans Will Love</h1>
@@ -42,9 +46,9 @@
       <button>Register</button>
     </div>
     <div id="socials">
-      <div class="facebook"></div>
-      <div class="twitter"></div>
-      <div  class="instagram"></div>
+      <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
+      <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
+      <div class="instagram"><i class="fa-brands fa-instagram"></i></div>
     </div>
 
     <footer>
@@ -54,6 +58,8 @@
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>.
       </p>
+    </div>
+    
     </footer>
   </body>
 </html>
