--- a/index.html
+++ b/index.html
@@ -16,50 +16,52 @@
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
-    <link rel="stylesheet" href="https://kit.fontawesome.com/80aada6d6e.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/80aada6d6e.js" crossorigin="anonymous"></script>
     <style>
       .attribution {
         font-size: 11px;
         text-align: center;
+        padding-top: 10px;
       }
       .attribution a {
-        color: hsl(228, 45%, 44%);
+        color: hsl(0, 0%, 0%);
       }
     </style>
   </head>
   <body>
-    <div id="content">
-      <div id="section">
-      <div class="logo"><img src="images/logo.svg" alt="" /></div>
-      <div class="illustration-mockup">
-        <img src="images/illustration-mockups.svg" alt="" />
-      </div>
-    </div>
-    <div id="section2">
-      <h1>Build The Community Your Fans Will Love</h1>
-
-      <p>
-        Huddle re-imagines the way we build communities. You have a voice, but
-        so does your audience. Create connections with your users as you engage
-        in genuine discussion.
-      </p>
-      <button>Register</button>
-    </div>
-    <div id="socials">
-      <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
-      <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
-      <div class="instagram"><i class="fa-brands fa-instagram"></i></div>
-    </div>
-
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </div>
-    
-    </footer>
+    <main id="container">
+      <header class="logo"><img src="images/logo.svg" alt="" /></header>
+      <section class="section">
+        <div class="illustration-mockup">
+          <img src="images/illustration-mockups.svg" alt="" class="illustration-mockup"/>
+        </div>
+        <div id="content">
+          <h1>
+            Build The <span class="line-break">Community</span>Your Fans Will
+            Love
+          </h1>
+          <p class="description">
+            Huddle re-imagines the way we build communities. You
+            <span class="line-break">have</span> a voice, but so does your
+            audience. Create connections <span class="line-break">with</span>
+            your users as you engage in genuine discussion.
+          </p>
+          <button>Register</button>
+        </div>
+        <div id="socials">
+          <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
+          <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
+          <div class="instagram"><i class="fa-brands fa-instagram"></i></div>
+        </div>
+      </section>
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Mumina Abdi</a>.
+        </p>
+      </footer>
+    </main>
   </body>
 </html>
